--- a/TunepalGodot/export_presets.cfg
+++ b/TunepalGodot/export_presets.cfg
@@ -7,7 +7,7 @@ advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.db"
 exclude_filter=""
 export_path="../export/tunepal-ios.xcodeproj"
 patches=PackedStringArray()
